
Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)
* Add Manufacturer Part Number product identifier
* Add brand product identifier
* Support generate barcode of different type
* Add code on product category
* Add product deactivable mixins

Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.7
* Add support for Python 3.11
* Remove non-standard work day unit
* Add energy units and category
* Add barcode function on product identifier
* Add identifier_get to product

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)

Version 6.4.0 - 2022-05-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Forbid to decrease digits of unit of measure
* Add support for Python 3.10
* Remove support for Python 3.6

Version 6.2.0 - 2021-11-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Prevent editing list and cost prices without a company
* Make list price not required on product
* Provide digits from unit of measure
* Allow only fixed cost price as method for service

Version 6.0.0 - 2021-05-03
--------------------------
* Bug fixes (see mercurial logs for details)
* Deactivate variants when product is deactivated
* Allow multiple templates to be added/removed on a category

Version 5.8.0 - 2020-11-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.5
* Allow the product template code to be set from a sequence
* Set code column first in template tree view
* Add default order on product and template
* Check price_decimal configuration

Version 5.6.0 - 2020-05-04
--------------------------
* Bug fixes (see mercurial logs for details)
* Add round_price
* Make product code unique