@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form>
+    <label name="source" string="Product"/>
+    <field name="source"/>
+    <label name="destination" string="Replaced By"/>
+    <field name="destination"/>
+</form>
