@@ -1,3 +1,4 @@
+* Add wizard to replace product
 
 Version 7.2.0 - 2024-04-29
 --------------------------
